# AUTOgraph

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: external-agent-contract.md
src/autograph/: __init__.py  cli.py  detectors.py  external_pdf.py  models.py  parsers.py
src/autograph/signers/: docx.py  pdf.py
tests/: test_detection.py  test_docx_signer.py  test_external_cli.py  test_external_pdf_planner.py  test_external_plan_security.py  test_hwpx_parser.py  test_pdf_multi_page_signer.py  test_pdf_signer.py
